--- a/vlookup.html
+++ b/vlookup.html
@@ -203,19 +203,13 @@ my_ratings_with_more_info &lt;- my_ratings_with_s_e %&gt;%
    &lt;td style="text-align:left;"&gt; Basketball &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 2005-04-19 &lt;/td&gt;
   &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:right;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 6 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; Hot Girl &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 2005-04-26 &lt;/td&gt;
-  &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
 ]
 
 --
-
-This is a join!
+&lt;br&gt;&lt;br&gt;
+.center[This is a join!]
 
 ---
 
